closure-module-function-class-Summarize-jjg

--- a/jjg-WrapperJS-2022-11-11/index_bibao.html
+++ b/jjg-WrapperJS-2022-11-11/index_bibao.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>js模块封装-jjg-2022-11-10</title>
+    <title>js-wrapper-jjg-2022-11-11</title>
+	<script src="./BibaoFunction.js"></script>
     <!-- 
        <link rel="stylesheet" href="./style.css">
     -->
@@ -54,18 +55,11 @@
   </head>
 
   <body>
-    <h1>焦晶国封装JavaScript代码测试-2022-11-10</h1>
+    <h1>JavaScript-wrapper-code-test-2022-11-11</h1>
     <canvas id="canvas1"></canvas>
-	<div id="buttons">
-		<button type="text">点击</button>
-		<button type="text">点击</button>
-		<button type="text">点击</button>
-		<button type="text">点击</button>
-		<button type="text">点击</button>
-        <button type="text">点击</button>
-		<button type="text">点击</button>
-	</div>
-    <script>
+	<script>
+
+
 		// set up canvas
 		const canvas = document.querySelector('canvas');
 		const ctx = canvas.getContext('2d');
